--- a/abc.html
+++ b/abc.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    nội dung đang cập nhật sss...
-    
-    fasdfasdfasdf
+    master
 </body>
 </html>
